--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: Build and Deploy Azzapp
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -168,6 +169,7 @@ jobs:
       # IOS App build
       - name: Cache CocoaPods
         uses: actions/cache@v3
+        if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/main'
         with:
           path: packages/app/ios/Pods
           key: ${{ runner.os }}-pods-${{ hashFiles('packages/app/ios/Podfile.lock') }}
@@ -200,6 +202,7 @@ jobs:
 
       - name: Deploy on App Center
         run: yarn deploy:ios
+        if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/main'
         env:
           APPCENTER_OWNER_NAME: azzapp
           APPCENTER_IOS_APP_NAME: ${{ env.app_center_ios_app_name }}
