--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -155,6 +155,9 @@ dependencies {
     // TODO https://github.com/Kotlin/kotlinx.coroutines#avoiding-including-the-debug-infrastructure-in-the-resulting-apk
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
 
+    // Selfie segmentation mlkit
+    implementation 'com.google.mlkit:segmentation-selfie:16.0.0-beta4'
+    
     // glide dependencies
     implementation "com.github.bumptech.glide:glide:4.14.2"
     implementation "com.github.bumptech.glide:okhttp3-integration:4.14.2"
