--- a/packages/app/android/build.gradle
+++ b/packages/app/android/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
-        minSdkVersion = 24
+        minSdkVersion = 28 // needed for segment, same version as instagram
         compileSdkVersion = 33
         targetSdkVersion = 33
         kotlinVersion = "1.7.20" 
