--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
   "resolutions": {
     "@types/react": "^18.2.20",
     "graphql": "^16.8.0",
-    "node-pty": "1.0.0",
-    "strip-ansi": "6.0.1"
+    "node-pty": "1.0.0"
   }
 }
