--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "resolutions": {
     "@types/react": "^18.2.20",
     "graphql": "^16.8.0",
-    "node-pty": "1.0.0"
+    "node-pty": "1.0.0",
+    "string-width": "^7.0.0"
   }
 }
