--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "jest": "^29.6.3",
     "jest-expo": "^49.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
-    "node-fetch": "^2",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.0.2",
@@ -98,6 +97,6 @@
     "@types/react": "^18.2.20",
     "graphql": "^16.8.0",
     "node-pty": "1.0.0",
-    "string-width": "^7.0.0"
+    "cliui": "^8.0.1"
   }
 }
