--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,11 +26,11 @@
     "@sentry/nextjs": "^7.70.0",
     "@sentry/tracing": "^7.70.0",
     "@vercel/og": "^0.5.17",
-    "bcrypt-ts": "^4.0.0",
     "classnames": "^2.3.2",
     "encoding": "^0.1.13",
     "google-wallet": "^1.0.16",
     "graphql-yoga": "^4.0.4",
+    "hash-wasm": "^4.10.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "next": "^14.0.1",
