--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/lodash": "4.14.197",
-    "drizzle-kit": "0.19.13"
+    "drizzle-kit": "0.19.13",
+    "node-fetch": "^3"
   }
 }
