--- a/packages/app/android/app/src/main/AndroidManifest.xml
+++ b/packages/app/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
   <application android:name=".MainApplication" android:label="@string/app_name"
     android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round"
     android:allowBackup="false" android:theme="@style/BootTheme"
-    android:requestLegacyExternalStorage="true">
+    android:requestLegacyExternalStorage="true"
+    >
     <activity android:name=".MainActivity"
       android:label="@string/app_name"
       android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
