--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -107,6 +107,7 @@
     "react-native-vision-camera": "^2.16.3",
     "react-phone-number-input": "^3.3.6",
     "react-relay": "^14.1.0",
+    "rn-text-size": "4.0.0-rc.3",
     "use-debounce": "^9.0.4",
     "zod": "^3.22.2"
   },
