--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -78,6 +78,7 @@
     "libphonenumber-js": "^1.10.45",
     "lodash": "^4.17.21",
     "lottie-react-native": "6.3.1",
+    "lz-string": "^1.5.0",
     "react": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-intl": "^6.4.7",
