--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "libphonenumber-js": "^1.10.45",
+    "lz-string": "^1.5.0",
     "validator": "^13.11.0",
     "vcard-creator": "^0.6.0",
     "iron-webcrypto": "^0.8.0",
