--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -91,6 +91,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.13.4",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-keyboard-controller": "^1.9.4",
     "react-native-localize": "^3.0.2",
     "react-native-mime-types": "^2.4.0",
     "react-native-mmkv": "^2.11.0",
