--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -7,6 +7,12 @@
       "node": "18.17.0",
       "env": {
         "SENTRY_DSN": "https://13a33b3788344ceea14cf298a220fead@o4505353883680768.ingest.sentry.io/4505358469038080"
+      },
+      "ios": {
+        "image": "latest"
+      },
+      "android": {
+        "image": "default"
       }
     },
     "development": {
