--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -55,6 +55,7 @@
     "@react-native-async-storage/async-storage": "1.19.8",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-native/metro-config": "^0.73.2",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@reeq/react-native-passkit": "^0.1.2",
     "@sentry/react-native": "5.14.1",
     "@shopify/flash-list": "1.6.3",
