--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
     "@envelop/sentry": "^6.0.1",
     "@graphql-yoga/plugin-persisted-operations": "^2.0.4",
     "@paralleldrive/cuid2": "^2.2.2",
+    "use-resize-observer": "^9.1.0",
     "@sendgrid/mail": "^7.4.6",
     "@sentry/nextjs": "^7.70.0",
     "@sentry/tracing": "^7.70.0",
@@ -36,7 +37,7 @@
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lz-string": "^1.5.0",
-    "next": "^14.0.1",
+    "next": "^14.0.4",
     "os-browserify": "^0.3.0",
     "passkit-generator": "^3.1.11",
     "path-browserify": "^1.0.1",
