--- a/packages/app/android/app/src/main/AndroidManifest.xml
+++ b/packages/app/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
   <uses-permission android:name="android.permission.RECORD_AUDIO" />
   <uses-permission android:name="android.permission.READ_CONTACTS" />
   <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-feature android:glEsVersion="0x00020000" android:required="true" />
   <uses-feature android:name="android.hardware.camera.any" android:required="false" />
   <uses-feature android:name="android.hardware.camera" android:required="false" />
@@ -17,7 +17,7 @@
     android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round"
     android:allowBackup="false" android:theme="@style/AppTheme"
     android:requestLegacyExternalStorage="true"
-    >
+  >
     <activity android:name=".MainActivity"
       android:label="@string/app_name"
       android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
@@ -43,6 +43,7 @@
         <data android:scheme="http" />
         <data android:scheme="https" />
         <data android:host="@string/azzapp_domain" />
+        <data android:pathPattern=".*[^emailSignature].*" />
       </intent-filter>
     </activity>
   </application>
