--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -73,6 +73,8 @@
     "@sentry/react-native": "^5.20.0",
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-skia": "^1.0.4",
+    "@testing-library/react-native": "^12.4.5",
+    "@types/react": "^18.2.73",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "expo": "^50.0.14",
@@ -88,41 +90,41 @@
     "expo-sensors": "~12.9.1",
     "expo-status-bar": "^1.11.1",
     "graphql": "^16.8.1",
-    "graphql-relay": "^0.10.0",
+    "graphql-relay": "^0.10.1",
     "i18n-iso-countries": "^7.11.0",
-    "libphonenumber-js": "^1.10.58",
+    "libphonenumber-js": "^1.10.59",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.7.0",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
-    "react-hook-form": "^7.51.1",
-    "react-intl": "^6.6.3",
+    "react-hook-form": "^7.51.2",
+    "react-intl": "^6.6.4",
     "react-native": "^0.73.6",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.8",
-    "react-native-bootsplash": "^5.4.1",
+    "react-native-bootsplash": "^5.5.0",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-email-link": "^1.15.0",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "~2.15.0",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-size": "^1.1.6",
-    "react-native-keyboard-controller": "^1.11.4",
+    "react-native-keyboard-controller": "^1.11.5",
     "react-native-localize": "^3.0.6",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^2.12.2",
-    "react-native-pager-view": "^6.2.3",
+    "react-native-pager-view": "^6.3.0",
     "react-native-permissions": "^4.1.5",
     "react-native-quick-base64": "^2.0.8",
     "react-native-purchases": "^7.24.0",
     "react-native-reanimated": "~3.8.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "~3.29.0",
+    "react-native-screens": "^3.30.1",
     "react-native-share": "^10.1.0",
     "react-native-svg": "^15.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^4.0.0-beta.10",
+    "react-native-vision-camera": "^4.0.0-beta.11",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.0",
     "zod": "3.22.4"
