--- a/package.json
+++ b/package.json
@@ -39,60 +39,60 @@
     "graphql-codegen --watch"
   ],
   "devDependencies": {
-    "@babel/cli": "7.22.10",
-    "@babel/core": "7.22.10",
+    "@babel/cli": "7.24.1",
+    "@babel/core": "7.24.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/plugin-syntax-jsx": "^7.22.5",
-    "@babel/plugin-transform-react-jsx": "^7.22.5",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-typescript": "7.22.5",
-    "@babel/runtime": "^7.22.10",
-    "@formatjs/cli-lib": "^6.1.3",
-    "@graphql-codegen/add": "^5.0.0",
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/schema-ast": "^4.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-resolvers": "^4.0.1",
-    "@octokit/rest": "^20.0.1",
-    "@parcel/watcher": "^2.3.0",
-    "@react-native/babel-preset": "^0.73.21",
+    "@babel/plugin-syntax-jsx": "^7.24.1",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-typescript": "7.24.1",
+    "@babel/runtime": "^7.24.1",
+    "@formatjs/cli-lib": "^6.3.8",
+    "@graphql-codegen/add": "^5.0.2",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/schema-ast": "^4.0.2",
+    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-resolvers": "^4.0.6",
+    "@octokit/rest": "^20.0.2",
+    "@parcel/watcher": "^2.4.1",
+    "@react-native/babel-preset": "^0.75.0-main",
     "@svgr/webpack": "^8.1.0",
-    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/blessed": "^0.1.21",
-    "@types/jest": "^29.5.3",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "babel-jest": "^29.7.0",
-    "babel-plugin-formatjs": "^10.5.10",
+    "babel-plugin-formatjs": "^10.5.14",
     "babel-plugin-module-resolver": "5.0.0",
-    "babel-plugin-relay": "^16.1.0",
+    "babel-plugin-relay": "^16.2.0",
     "blessed": "^0.1.81",
     "blessed-xterm": "^1.4.4",
-    "csv-stringify": "^6.4.2",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
+    "csv-stringify": "^6.4.6",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-formatjs": "^4.10.3",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-formatjs": "^4.12.2",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-spawned-stream": "^1.0.1",
-    "jest": "^29.6.3",
-    "jest-expo": "^49.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^50.0.4",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^3.0.2",
+    "prettier": "^3.2.5",
     "react-native-version": "^4.0.0",
-    "relay-compiler": "^16.1.0",
-    "semver": "^7.5.4",
+    "relay-compiler": "^16.2.0",
+    "semver": "^7.6.0",
     "tagged-versions": "^1.3.0",
-    "ts-jest": "^29.1.1",
-    "turbo": "^1.10.12",
-    "typescript": "^5.3.3"
+    "ts-jest": "^29.1.2",
+    "turbo": "^1.13.2",
+    "typescript": "^5.4.3"
   },
   "resolutions": {
     "@types/react": "^18.2.67",
