--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -55,7 +55,8 @@
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "stream-browserify": "^3.0.0",
-    "twilio": "^5.0.2"
+    "twilio": "^5.0.2",
+    "next-axiom": "^1.1.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
