--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "typecheck": "tsc -p tsconfig.next.json --noEmit",
     "clean": "rm -rf lib && rm -f tsconfig.tsbuildinfo && rm -rf .next && rm -rf node_modules",
     "persist-queries": "node ./scripts/persistQueries.js"
@@ -18,6 +19,8 @@
     "@azzapp/i18n": "0.5.5-canary.222",
     "@azzapp/shared": "0.5.5-canary.222",
     "@azzapp/schema": "0.5.5-canary.222",
+    "@conform-to/react": "^1.1.0",
+    "@conform-to/zod": "^1.1.0",
     "@envelop/dataloader": "^6.0.0",
     "@envelop/generic-auth": "^7.0.0",
     "@envelop/parser-cache": "^7.0.0",
@@ -38,11 +41,14 @@
     "encoding": "^0.1.13",
     "google-wallet": "^1.0.18",
     "graphql-yoga": "^5.3.0",
+    "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lz-string": "^1.5.0",
     "next": "^14.1.4",
+    "next-axiom": "^1.1.1",
     "next-cloudinary": "^6.3.0",
     "os-browserify": "^0.3.0",
     "passkit-generator": "^3.1.11",
@@ -55,8 +61,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.33.3",
     "stream-browserify": "^3.0.0",
-    "twilio": "^5.0.2",
-    "next-axiom": "^1.1.1"
+    "twilio": "^5.0.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
