--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "build": "turbo run build",
-    "build-app-dependencies": "turbo run build --filter=app^...",
+    "build-app-dependencies": "turbo run build --filter=app^...--filter=payment^...",
     "dev": "node ./scripts/dev.js",
     "build:ios": "turbo run build:ios",
     "build:android": "turbo run build:android",
