--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -73,10 +73,10 @@
     "@reeq/react-native-passkit": "^0.1.3",
     "@sentry/react-native": "~5.22.3",
     "@shopify/flash-list": "1.6.4",
-    "@shopify/react-native-skia": "^1.3.0",
+    "@shopify/react-native-skia": "^1.3.3",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^51.0.11",
+    "expo": "^51.0.12",
     "expo-av": "^14.0.5",
     "expo-blur": "^13.0.2",
     "expo-clipboard": "~6.0.3",
@@ -109,21 +109,21 @@
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-size": "^1.1.6",
     "react-native-keyboard-controller": "^1.12.2",
-    "react-native-localize": "^3.1.0",
+    "react-native-localize": "^3.2.0",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-pager-view": "^6.3.1",
     "react-native-permissions": "^4.1.5",
     "react-native-purchases": "^7.27.3",
     "react-native-quick-base64": "^2.1.2",
-    "react-native-reanimated": "~3.11.0",
+    "react-native-reanimated": "^3.13.0-rc.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-share": "^10.2.1",
     "react-native-svg": "^15.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^4.1.0",
+    "react-native-vision-camera": "^4.2.1",
     "react-relay": "^16.2.0",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
