--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@azzapp/data": "workspace:^",
     "@azzapp/shared": "workspace:^",
+    "@conform-to/react": "^1.1.4",
+    "@conform-to/zod": "^1.1.4",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
