--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "babel-jest": "^29.7.0",
     "babel-plugin-formatjs": "^10.5.16",
     "babel-plugin-module-resolver": "^5.0.2",
-    "babel-plugin-relay": "^16.2.0",
+    "babel-plugin-relay": "^17.0.0",
     "blessed": "^0.1.81",
     "blessed-xterm": "^1.4.4",
     "csv-stringify": "^6.4.6",
@@ -83,7 +83,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "react-native-version": "^4.0.0",
-    "relay-compiler": "^16.2.0",
+    "relay-compiler": "^17.0.0",
     "semver": "^7.6.0",
     "tagged-versions": "^1.3.0",
     "ts-jest": "^29.1.2",
@@ -99,8 +99,7 @@
     "expo-contacts@~13.0.3": "patch:expo-contacts@npm%3A13.0.3#./.yarn/patches/expo-contacts-npm-13.0.3-c6435ab472.patch",
     "@shopify/react-native-skia@^1.3.3": "patch:@shopify/react-native-skia@npm%3A1.3.3#./.yarn/patches/@shopify-react-native-skia-npm-1.3.3-0b443706cc.patch",
     "drizzle-kit@^0.22.7": "patch:drizzle-kit@npm%3A0.22.7#./.yarn/patches/drizzle-kit-npm-0.22.7-19553a88f0.patch",
-    "drizzle-orm@^0.31.2": "patch:drizzle-orm@npm%3A0.31.2#./.yarn/patches/drizzle-orm-npm-0.31.2-f0b4701b98.patch",
-    "react-native-vision-camera@^4.3.1": "patch:react-native-vision-camera@npm%3A4.3.1#./.yarn/patches/react-native-vision-camera-npm-4.3.1-3f4a97f514.patch"
+    "drizzle-orm@^0.31.2": "patch:drizzle-orm@npm%3A0.31.2#./.yarn/patches/drizzle-orm-npm-0.31.2-f0b4701b98.patch"
   },
   "dependencies": {
     "node-gyp": "^10.1.0"
