--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -71,11 +71,11 @@
     "@lottiefiles/lottie-js": "0.4.2",
     "@miblanchard/react-native-slider": "2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.1.0",
+    "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/metro-config": "^0.74.84",
     "@reeq/react-native-passkit": "^0.1.3",
-    "@sentry/react-native": "~5.22.3",
+    "@sentry/react-native": "^5.24.0",
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-skia": "^1.3.3",
     "chroma-js": "^2.4.2",
@@ -100,7 +100,7 @@
     "lottie-react-native": "^6.7.2",
     "lz-string": "^1.5.0",
     "react": "^18.3.1",
-    "react-hook-form": "^7.51.5",
+    "react-hook-form": "^7.52.0",
     "react-intl": "^6.6.8",
     "react-native": "^0.74.2",
     "react-native-blob-jsi-helper": "^0.3.1",
@@ -121,14 +121,14 @@
     "react-native-purchases": "^7.27.4",
     "react-native-quick-base64": "^2.1.2",
     "react-native-reanimated": "^3.13.0-rc.1",
-    "react-native-safe-area-context": "^4.10.4",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-share": "^10.2.1",
     "react-native-svg": "^15.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^4.3.1",
-    "react-relay": "^16.2.0",
+    "react-native-vision-camera": "^4.3.2",
+    "react-relay": "^17.0.0",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
@@ -145,7 +145,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.3.1",
-    "relay-test-utils": "^16.2.0",
+    "relay-test-utils": "^17.0.0",
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5"
   }
