--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -71,6 +71,7 @@
     "@lottiefiles/lottie-js": "0.4.2",
     "@miblanchard/react-native-slider": "2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-camera-roll/camera-roll": "^7.8.1",
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native/metro-config": "^0.74.84",
@@ -89,7 +90,6 @@
     "expo-haptics": "~13.0.1",
     "expo-image": "^1.12.12",
     "expo-linear-gradient": "~13.0.2",
-    "expo-media-library": "~16.0.3",
     "expo-sensors": "13.0.8",
     "expo-status-bar": "^1.12.1",
     "graphql": "^16.8.2",
