--- a/packages/web/vercel.json
+++ b/packages/web/vercel.json
@@ -12,5 +12,28 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    { "source": "/", "destination": "https://storefront.azzapp.com/" },
+    {
+      "source": "/plus/:match*",
+      "destination": "https://storefront.azzapp.com/plus/:match*"
+    },
+    {
+      "source": "/personal/:match*",
+      "destination": "https://storefront.azzapp.com/personal/:match*"
+    },
+    {
+      "source": "/pricing",
+      "destination": "https://storefront.azzapp.com/pricing"
+    },
+    {
+      "source": "/company/:match*",
+      "destination": "https://storefront.azzapp.com/company/:match*"
+    },
+    {
+      "source": "/legal/:match*",
+      "destination": "https://storefront.azzapp.com/legal/:match*"
+    }
   ]
 }
