--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/app",
-  "version": "0.5.15-canary.183",
+  "version": "0.5.16",
   "scripts": {
     "test": "jest",
     "typecheck": "tsc --noEmit",
