--- a/packages/payment/package.json
+++ b/packages/payment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/payment",
-  "version": "0.5.15-canary.183",
+  "version": "0.5.16",
   "private": true,
   "exports": {
     ".": {
