--- a/package.json
+++ b/package.json
@@ -96,11 +96,11 @@
     "node-pty": "1.0.0",
     "cliui": "^8.0.1",
     "@envelop/sentry@^9.0.0": "patch:@envelop/sentry@npm%3A9.0.0#./.yarn/patches/@envelop-sentry-npm-9.0.0-d01d6a8911.patch",
-    "react-native-screens@^3.31.1": "patch:react-native-screens@npm%3A3.31.1#./.yarn/patches/react-native-screens-npm-3.31.1-d5786be485.patch",
     "expo-contacts@~13.0.3": "patch:expo-contacts@npm%3A13.0.3#./.yarn/patches/expo-contacts-npm-13.0.3-c6435ab472.patch",
     "@shopify/react-native-skia@^1.3.3": "patch:@shopify/react-native-skia@npm%3A1.3.3#./.yarn/patches/@shopify-react-native-skia-npm-1.3.3-0b443706cc.patch",
     "drizzle-kit@^0.22.7": "patch:drizzle-kit@npm%3A0.22.7#./.yarn/patches/drizzle-kit-npm-0.22.7-19553a88f0.patch",
-    "drizzle-orm@^0.31.2": "patch:drizzle-orm@npm%3A0.31.2#./.yarn/patches/drizzle-orm-npm-0.31.2-f0b4701b98.patch"
+    "drizzle-orm@^0.31.2": "patch:drizzle-orm@npm%3A0.31.2#./.yarn/patches/drizzle-orm-npm-0.31.2-f0b4701b98.patch",
+    "react-native-screens@^3.32.0": "patch:react-native-screens@npm%3A3.32.0#./.yarn/patches/react-native-screens-npm-3.32.0-a22eba53a2.patch"
   },
   "dependencies": {
     "node-gyp": "^10.1.0"
