--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "react-native-blob-jsi-helper@^0.3.1": "patch:react-native-blob-jsi-helper@npm%3A0.3.1#./.yarn/patches/react-native-blob-jsi-helper-npm-0.3.1-93a155f71e.patch",
     "react-native-screens@^3.34.0": "patch:react-native-screens@npm%3A3.34.0#./.yarn/patches/react-native-screens-npm-3.34.0-3babbb1374.patch",
     "react-native-image-size@^1.1.6": "patch:react-native-image-size@npm%3A1.1.6#./.yarn/patches/react-native-image-size-npm-1.1.6-38755aad48.patch",
-    "drizzle-kit@^0.24.2": "patch:drizzle-kit@npm%3A0.24.2#./.yarn/patches/drizzle-kit-npm-0.24.2-ed6f619edc.patch"
+    "drizzle-kit@^0.24.2": "patch:drizzle-kit@npm%3A0.24.2#./.yarn/patches/drizzle-kit-npm-0.24.2-ed6f619edc.patch",
+    "vcard-creator@^0.7.0": "patch:vcard-creator@npm%3A0.7.0#./.yarn/patches/vcard-creator-npm-0.7.0-a36000c711.patch"
   },
   "dependencies": {
     "node-gyp": "^10.1.0"
