--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,6 +41,7 @@
     "bcrypt-ts": "^5.0.2",
     "classnames": "^2.5.1",
     "encoding": "^0.1.13",
+    "file-saver": "^2.0.5",
     "google-wallet": "^1.0.18",
     "graphql-yoga": "^5.3.1",
     "jose": "^5.3.0",
@@ -67,6 +68,7 @@
     "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.13",
     "@types/qrcode": "^1.5.5",
